qvalue 1.99.z: 
This update of the qvalue package includes:
- removal of tcltk usage
- the use of ggplot2 in the plotting functions
- an updated vignette
- vectorizing sections of the code 
- function name changes
- inclusion of local FDR estimation
