@@ -1,4 +1,8 @@
-qvalue 1.99.z: 
+qvalue 2.1.1:
+- handles NA values
+- upgraded plotting functions
+
+qvalue 2.0.0: 
 This update of the qvalue package includes:
 - removal of tcltk usage
 - the use of ggplot2 in the plotting functions
@@ -6,4 +10,3 @@ This update of the qvalue package includes:
 - vectorizing sections of the code 
 - function name changes
 - inclusion of local FDR estimation
-
